# SFML_fragment_shaders

./: CMakeLists.txt  README.md
Ubuntu/: HelloWorld.sh  SimpleTest.sh  test10.sh  test11.sh  test12.sh  test13.sh  test14.sh  test15.sh  test16.sh  test4.sh  test5.sh  test6.sh  test7.sh  test9.sh  testThree.sh  test_Kernels.sh
WinLibs/: test10.cmd  test11.cmd  test5.cmd  test7.cmd  test8.cmd  test_Kernels.cmd  test_Lanczos.cmd  test_openGL.cmd
code/: HelloWorld.c  HelloWorld.sh  SimpleTest.sh  testThree.c  testThree.sh
data/: kernels.txt
engine/maths/: bbGPU_Interpolation.c  bbGPU_Interpolation.h
output/: kernels.ods
test/: SimpleTest.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c  test_Kernels.c  test_Lanczos.c  test_openGL.c
